# mth-apclient

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  format.sh  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmake/: ApClient.cmake  DearImGui.cmake  FridaGum.cmake  MinHook.cmake  MinaModApi.cmake  SimpleGitVersion.cmake  apply_patch.cmake  compiler_setup.cmake  glibc_compat.h
cmake/patches/: websocketpp-0.8.2-cxx23-cdtor.patch
cmake/toolchains/: llvm-mingw-x64.cmake
cmake/triplets/: x64-linux-mthap.cmake
docs/: README.md  architecture.md  reverse-engineering.md  user-guide.md
docs/randomizer/: README.md  items.tsv  locations.tsv
packaging/: mod.yc.in
scripts/: check-glibc-max.sh  fetch-windows-depot.sh  gen_win_signatures.py  install-format-hook.py  re_query.py  sig_mapping.json  sigtool.py  validate_signatures.py  win_signatures.json
src/mod/: CMakeLists.txt  mod_api.cpp  mod_api.hpp
src/mth/: CMakeLists.txt  death_hooks.cpp  death_hooks.hpp  game_hooks.cpp  game_hooks.hpp  game_item_granter.hpp  levelcap_hooks.cpp  levelcap_hooks.hpp  modifier_hooks.cpp  modifier_hooks.hpp  mth-apclient.cpp  rando_hooks.cpp  rando_hooks.hpp
src/mth/app/: ap_session.cpp  ap_session.hpp  app.cpp  app.hpp  entry.cpp  grant_pipeline.cpp  grant_pipeline.hpp  hook_manager.cpp  hook_manager.hpp
src/mth/core/: ability_gate.hpp  ability_ids.hpp  ap_coordinator.cpp  ap_coordinator.hpp  ap_events.hpp  ap_ids.hpp  ap_link.hpp  ap_save_state.cpp  ap_save_state.hpp  ap_state.cpp  ap_state.hpp  app.cpp  app.hpp  area_reporter.cpp  area_reporter.hpp  boss_checks.hpp  broadcast.cpp  broadcast.hpp  build_id.cpp  build_id.hpp  command_sink.hpp  config.cpp  config.hpp  connect_resend_gate.hpp  death_broadcast_gate.hpp  dev_commands.cpp  dev_commands.hpp  fountain_lamps.hpp  game_events.hpp  game_layout.hpp  game_symbols.hpp  goal_state.hpp  inbound_granter.cpp  inbound_granter.hpp  item_granter_interface.hpp  lock_registry.cpp  lock_registry.hpp  log_ring.cpp  log_ring.hpp  login_prefs.cpp  (+21 more)
src/mth/core/ap/: ap_coordinator.cpp  ap_coordinator.hpp  ap_events.hpp  ap_ids.hpp  ap_link.hpp  ap_save_state.cpp  ap_save_state.hpp  ap_state.cpp  ap_state.hpp  inbound_key.hpp  null_ap_link.hpp  save_slot_gate.hpp
src/mth/core/data/: ability_ids.hpp  game_layout.hpp  game_symbols.hpp  game_tables.cpp  game_tables.hpp  modifier_table.cpp
src/mth/features/: ability_hooks.cpp  ability_hooks.hpp  boss_hooks.cpp  chest_hooks.cpp  death_hooks.cpp  death_hooks.hpp  fountain_lamp_hooks.cpp  fountain_lamp_hooks.hpp  goal_tracker.cpp  goal_tracker.hpp  item_granter.cpp  item_granter.hpp  levelcap_hooks.cpp  levelcap_hooks.hpp  location_hooks.cpp  location_hooks.hpp  lock_hooks.cpp  lock_hooks.hpp  modifier_hooks.cpp  modifier_hooks.hpp  pawn_shop_hooks.cpp  player_tracker.cpp  player_tracker.hpp  room_tracker.cpp
src/mth/hooks/: ability_hooks.cpp  ability_hooks.hpp  boss_hooks.cpp  boss_hooks.hpp  chest_hooks.cpp  chest_hooks.hpp  death_hooks.cpp  death_hooks.hpp  game_hooks.cpp  game_hooks.hpp  game_tables.cpp  game_tables.hpp  goal_tracker.cpp  goal_tracker.hpp  item_granter.cpp  item_granter.hpp  levelcap_hooks.cpp  location_hooks.cpp  location_hooks.hpp  lock_hooks.cpp  lock_hooks.hpp  modifier_hooks.cpp  modifier_hooks.hpp  pawn_shop_hooks.cpp  pawn_shop_hooks.hpp  player_tracker.cpp  rando_hooks.cpp  rando_hooks.hpp  room_tracker.cpp  room_tracker.hpp  scoped_hook.hpp
src/mth/net/: ap_link_apclient.cpp  ap_link_apclient.hpp  deathlink.cpp  deathlink.hpp
src/mth/ui/: broadcast_banner.cpp  broadcast_banner.hpp  command_sink.hpp  dev_console.cpp  dev_console.hpp  login_window.cpp  login_window.hpp  overlay_root.cpp  overlay_root.hpp
src/pal/: CMakeLists.txt  ap_save_gate.cpp  native_mod_entry.cpp  pal.hpp  pal_cert.hpp  pal_crash.hpp  pal_entry.hpp  pal_game.hpp  pal_hook.hpp  pal_log.hpp  pal_mem.hpp  pal_module.hpp  pal_native_mod.hpp  pal_overlay.hpp  pal_thread.hpp
src/pal/linux/: cert_linux.cpp  crash_handler_linux.cpp  entry_linux.cpp  game_linux.cpp  glibc_compat_linux.cpp  hook_engine_linux.cpp  log_linux.cpp  mem_linux.cpp  module_linux.cpp  overlay_linux.cpp  symbol_linux.cpp  thread_linux.cpp
src/pal/windows/: cert_windows.cpp  crash_handler_windows.cpp  entry_windows.cpp  game_windows.cpp  hook_engine_windows.cpp  log_windows.cpp  mem_windows.cpp  mingw_crt_shim.cpp  module_windows.cpp  overlay_windows.cpp  proxy_version.cpp  signature_scan.cpp  signature_scan.hpp  symbol_windows.cpp  thread_windows.cpp  win_signatures_generated.cpp
tests/: CMakeLists.txt
tests/mocks/: fake_ap_link.hpp  fake_mod_api.hpp
tests/unit/: ability_gate_test.cpp  ap_coordinator_test.cpp  ap_ids_test.cpp  ap_save_state_test.cpp  ap_state_test.cpp  area_reporter_test.cpp  boss_checks_test.cpp  broadcast_test.cpp  build_id_test.cpp  cert_test.cpp  config_test.cpp  connect_resend_gate_test.cpp  death_broadcast_gate_test.cpp  death_hooks_test.cpp  dev_commands_test.cpp  fountain_lamps_test.cpp  game_tables_test.cpp  goal_state_test.cpp  inbound_granter_test.cpp  inbound_key_test.cpp  lock_registry_test.cpp  log_ring_test.cpp  log_test.cpp  login_prefs_test.cpp  mod_api_test.cpp  modifier_config_test.cpp  modifier_table_test.cpp  offsets_test.cpp  rando_bridge_test.cpp  riprel_test.cpp  save_slot_gate_test.cpp  scout_registry_test.cpp  session_policy_test.cpp  shop_flatten_test.cpp  sig_scan_test.cpp  smoke_test.cpp  stat_cap_state_test.cpp  upgrade_state_test.cpp  wallet_cap_state_test.cpp
